--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 gdown
-transformers
+transformers==4.31.0
 pypdf
 python-dotenv
 llama-index==0.10.12
-gradio
+gradio==3.26.0
 einops
 accelerate
 llama-index-llms-huggingface
