--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ gdown
 transformers
 pypdf
 llama-index==0.10.12
+
+# Add a new line to separate the torch installation
 torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
