--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit
 gdown
 transformers
 pypdf
-llama-index
+llama-index>=0.11.0
 
 # Add a new line to separate the torch installation
 torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
