--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gdown
 transformers
 pypdf
 llama-index
+pip install --upgrade pip
 
 # Add a new line to separate the torch installation
-torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==2.2.0 -f https://download.pytorch.org/whl/torch_stable.html
