--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gdown
 transformers
 pypdf
 llama-index
+llama-index-embeddings-fastembed
 
 # Add a new line to separate the torch installation
 torch==2.2.0 -f https://download.pytorch.org/whl/torch_stable.html
